modify token verify logic and add interface of project